package com.aaron.yespdf.common.greendao;

import com.aaron.yespdf.common.bean.Collection;
import com.aaron.yespdf.common.bean.PDF;
import com.aaron.yespdf.common.bean.RecentPDF;

import org.greenrobot.greendao.AbstractDao;
import org.greenrobot.greendao.AbstractDaoSession;
import org.greenrobot.greendao.database.Database;
import org.greenrobot.greendao.identityscope.IdentityScopeType;
import org.greenrobot.greendao.internal.DaoConfig;

import java.util.Map;

// THIS CODE IS GENERATED BY greenDAO, DO NOT EDIT.

/**
 * {@inheritDoc}
 * 
 * @see org.greenrobot.greendao.AbstractDaoSession
 */
public class DaoSession extends AbstractDaoSession {

    private final DaoConfig collectionDaoConfig;
    private final DaoConfig pDFDaoConfig;
    private final DaoConfig recentPDFDaoConfig;

    private final CollectionDao collectionDao;
    private final PDFDao pDFDao;
    private final RecentPDFDao recentPDFDao;

    public DaoSession(Database db, IdentityScopeType type, Map<Class<? extends AbstractDao<?, ?>>, DaoConfig>
            daoConfigMap) {
        super(db);

        collectionDaoConfig = daoConfigMap.get(CollectionDao.class).clone();
        collectionDaoConfig.initIdentityScope(type);

        pDFDaoConfig = daoConfigMap.get(PDFDao.class).clone();
        pDFDaoConfig.initIdentityScope(type);

        recentPDFDaoConfig = daoConfigMap.get(RecentPDFDao.class).clone();
        recentPDFDaoConfig.initIdentityScope(type);

        collectionDao = new CollectionDao(collectionDaoConfig, this);
        pDFDao = new PDFDao(pDFDaoConfig, this);
        recentPDFDao = new RecentPDFDao(recentPDFDaoConfig, this);

        registerDao(Collection.class, collectionDao);
        registerDao(PDF.class, pDFDao);
        registerDao(RecentPDF.class, recentPDFDao);
    }
    
    public void clear() {
        collectionDaoConfig.clearIdentityScope();
        pDFDaoConfig.clearIdentityScope();
        recentPDFDaoConfig.clearIdentityScope();
    }

    public CollectionDao getCollectionDao() {
        return collectionDao;
    }

    public PDFDao getPDFDao() {
        return pDFDao;
    }

    public RecentPDFDao getRecentPDFDao() {
        return recentPDFDao;
    }

}
